use anyhow::Result;
use std::sync::Arc;
use std::time::Duration;
use tempfile::TempDir;
use tokio::task::LocalSet;
use parking_lot::Mutex;
use once_cell::sync::Lazy;
use tracing::info;
use prost::Message;

use krepis_kernel::adapters::storage::SovereignJournal;
use krepis_kernel::adapters::pool::{SovereignPool, PoolConfig};
use krepis_kernel::domain::tenant::{TenantMetadata, TenantTier};
use krepis_kernel::domain::TenantError;

static V8_TEST_MUTEX: Lazy<Mutex<()>> = Lazy::new(|| Mutex::new(()));

#[test] // ðŸ’¡ #[tokio::test] ëŒ€ì‹  ì¼ë°˜ #[test] ì‚¬ìš© (ë©€í‹°ìŠ¤ë ˆë“œ ëŸ°íƒ€ìž„ ë°©ì§€)
fn test_multi_tenant_isolation() -> Result<()> {
    let _lock = V8_TEST_MUTEX.lock();
    
    // ðŸ’¡ ë³„ë„ì˜ ì‹±ê¸€ìŠ¤ë ˆë“œ ëŸ°íƒ€ìž„ì„ ìˆ˜ë™ìœ¼ë¡œ ìƒì„±
    let rt = tokio::runtime::Builder::new_current_thread()
        .enable_all()
        .build()?;

    rt.block_on(async {
        let temp_dir = TempDir::new()?;
        let journal = Arc::new(SovereignJournal::new(temp_dir.path())?);
        let pool = SovereignPool::new(journal, PoolConfig::default());
        
        // Isolate í™•ë³´ ë° í•´ì œ
        {
            let _guard_a = pool.acquire("tenant-a")?;
            // drop ì‹œì ì— Isolateê°€ í’€ë¡œ ë°˜í™˜ë¨
        }
        // block_on ë‚´ë¶€ì˜ sleepì€ ìŠ¤ë ˆë“œ ì´ë™ì„ ìœ ë°œí•˜ì§€ ì•ŠìŒ
        tokio::time::sleep(Duration::from_millis(10)).await; 

        {
            let _guard_b = pool.acquire("tenant-b")?;
        }
        tokio::time::sleep(Duration::from_millis(10)).await;

        assert_eq!(pool.stats().cached_isolates, 2);

        pool.shutdown();
        Ok(())
    })
}

#[tokio::test]
async fn test_isolate_warm_reuse() -> Result<()> {
    let temp_dir = TempDir::new()?;
    let journal = Arc::new(SovereignJournal::new(temp_dir.path())?);
    let pool = Arc::new(SovereignPool::new(journal, PoolConfig::default()));
    
    // First request for tenant-x
    {
        let mut guard = pool.acquire("tenant-x")?;
        let runtime = guard.runtime_mut();
        
        // Execute simple JS
        runtime.execute_script(
            "test",
            "globalThis.testValue = 42;".to_string()
        )?;
    }
    
    // Pool should have 1 cached isolate
    assert_eq!(pool.stats().cached_isolates, 1);
    
    // Second request - should reuse (but fresh context)
    {
        let mut guard = pool.acquire("tenant-x")?;
        let runtime = guard.runtime_mut();
        
        // Due to fresh context, previous globalThis should be reset
        // (In production with proper v8::Context recreation)
        let _result = runtime.execute_script(
            "test2",
            "typeof globalThis.testValue".to_string()
        )?;
        
        // Note: In current implementation, global state persists
        // Production version would reset v8::Context
    }
    
    Ok(())
}

#[tokio::test]
async fn test_fault_isolation() -> Result<()> {
    let local = LocalSet::new();
    local.run_until(async {
        let temp_dir = TempDir::new()?;
        let journal = Arc::new(SovereignJournal::new(temp_dir.path())?);
        let pool = Arc::new(SovereignPool::new(journal.clone(), PoolConfig::default()));
        
        let panic_tenant_id = "panic-tenant";
        
        // 1. íŒ¨ë‹‰ ë°œìƒ í…ŒìŠ¤íŠ¸ (TenantError::RuntimeError ê²€ì¦)
        {
            let result = pool.execute_isolated(panic_tenant_id, |runtime| {
                runtime.execute_script(
                    "panic",
                    "throw new Error('Simulated panic');".to_string()
                ).map_err(|e| anyhow::anyhow!(e)) // anyhowë¡œ ì „ë‹¬
            }).await;
            
            // ðŸ’¡ ìˆ˜ì •ë¨: êµ¬ì²´ì ì¸ ë„ë©”ì¸ ì—ëŸ¬ íƒ€ìž… í™•ì¸
            match result {
                Err(TenantError::RuntimeError(msg)) => {
                    assert!(msg.contains("Simulated panic"));
                    info!("âœ… Caught expected RuntimeError");
                }
                _ => panic!("Expected TenantError::RuntimeError, got {:?}", result),
            }
        }

        // 2. ì €ë„ ê¸°ë¡ í™•ì¸ (C-001 ê²©ë¦¬ í™•ì¸)
        tokio::task::yield_now().await;
        assert!(journal.journal_count(panic_tenant_id).unwrap() > 0);
        
        pool.shutdown();
        Ok(())
    }).await
}

#[tokio::test]
async fn test_tenant_tier_resource_limits() -> Result<()> {
    // Free tier
    let free = TenantMetadata::new("free-user".to_string(), TenantTier::Free);
    let free_config = free.resource_config();
    assert_eq!(free_config.heap_limit_mb, 128);
    assert_eq!(free_config.max_concurrent_requests, 5);
    
    // Enterprise tier
    let enterprise = TenantMetadata::new("enterprise-user".to_string(), TenantTier::Enterprise);
    let ent_config = enterprise.resource_config();
    assert_eq!(ent_config.heap_limit_mb, 512);
    assert_eq!(ent_config.max_concurrent_requests, 100);
    
    Ok(())
}

#[test]
fn test_path_remapping() {
    let tenant = TenantMetadata::new("secure-tenant".to_string(), TenantTier::Standard);
    
    // Virtual path -> Physical path
    assert_eq!(
        tenant.safe_remap("/app/data/file.txt"),
        std::path::PathBuf::from("root/tenants/secure-tenant/app/data/file.txt")
    );
    
    // Security: Tenant can only access own paths
    assert!(tenant.is_path_allowed("root/tenants/secure-tenant/data/file.txt"));
    assert!(!tenant.is_path_allowed("root/tenants/other-tenant/data/file.txt"));
    assert!(!tenant.is_path_allowed("/etc/passwd"));
}

#[test]
fn test_storage_tree_naming() {
    let tenant = TenantMetadata::new("prod-123".to_string(), TenantTier::Enterprise);
    
    // Sled tree name follows spec-002 convention
    assert_eq!(tenant.storage_tree, "tenant_db_prod-123");
}

#[test]
fn test_path_remapping_logic() {
    // ë„ë©”ì¸ ë¡œì§ë§Œ í…ŒìŠ¤íŠ¸í•  ë•ŒëŠ” runtimeì´ í•„ìš” ì—†ìœ¼ë¯€ë¡œ ì¼ë°˜ í…ŒìŠ¤íŠ¸ ê°€ëŠ¥
    let tenant = TenantMetadata::new("secure-tenant".to_string(), TenantTier::Standard);
    
    // Spec-002: safe_remap ì´ë¦„ í™•ì¸
    let remapped = tenant.safe_remap("/app/data.txt");
    assert!(remapped.to_str().unwrap().contains("secure-tenant"));
}

/// C-001: í…Œë„ŒíŠ¸ë³„ ì €ë„ ê²©ë¦¬ í†µí•© í…ŒìŠ¤íŠ¸
#[tokio::test]
async fn test_journal_tenant_isolation_via_pool() -> Result<()> {
    let local = LocalSet::new();
    local.run_until(async {
        let temp_dir = TempDir::new()?;
        let journal = Arc::new(SovereignJournal::new(temp_dir.path())?);
        let pool = Arc::new(SovereignPool::new(journal.clone(), PoolConfig::default()));
        
        // í…Œë„ŒíŠ¸ A: ì—ëŸ¬ ë°œìƒ
        let tenant_a = "tenant-alpha";
        {
            let _ = pool.execute_isolated(tenant_a, |runtime| {
                runtime.execute_script("fail", "throw new Error('A failed');".to_string())?;
                Ok(())
            }).await;
        }
        tokio::task::yield_now().await;
        
        // í…Œë„ŒíŠ¸ B: ì—ëŸ¬ ë°œìƒ
        let tenant_b = "tenant-beta";
        {
            let _ = pool.execute_isolated(tenant_b, |runtime| {
                runtime.execute_script("fail", "throw new Error('B failed');".to_string())?;
                Ok(())
            }).await;
        }
        tokio::task::yield_now().await;
        
        // C-001 í•µì‹¬ ê²€ì¦: ê° í…Œë„ŒíŠ¸ì˜ ì €ë„ì´ ì™„ë²½ížˆ ê²©ë¦¬ë˜ì–´ ìžˆì–´ì•¼ í•¨
        let count_a = journal.journal_count(tenant_a).unwrap();
        let count_b = journal.journal_count(tenant_b).unwrap();
        
        assert!(count_a > 0, "Tenant A should have journal entries");
        assert!(count_b > 0, "Tenant B should have journal entries");
        
        // ì „ì²´ ì €ë„ ìˆ˜ = A + B (ê°ê° ë…ë¦½ëœ Treeì— ì €ìž¥)
        let total = journal.total_journal_count();
        assert_eq!(total, count_a + count_b, 
            "Total journal count should equal sum of tenant journals");
        
        // í…Œë„ŒíŠ¸ C: ì‹ ê·œ í…Œë„ŒíŠ¸ëŠ” ì €ë„ì´ ì—†ì–´ì•¼ í•¨
        assert_eq!(journal.journal_count("tenant-gamma").unwrap(), 0,
            "New tenant should have no journal entries");
        
        pool.shutdown();

        Ok(())
    }).await
}

#[tokio::test]
async fn test_execution_timeout_enforcement() -> Result<()> {
    let temp_dir = TempDir::new()?;
    let journal = Arc::new(SovereignJournal::new(temp_dir.path())?);
    
    // PoolConfig ê¸°ë³¸ê°’ (íƒ€ìž„ì•„ì›ƒì€ TenantTierì—ì„œ ê²°ì •ë¨)
    let pool = SovereignPool::new(journal, PoolConfig::default());
    let tenant_id = "timeout-tenant";

    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    // ðŸ’¡ í•´ê²°ì±…: tokio::spawnì„ ì œê±°í•©ë‹ˆë‹¤. 
    // ì»¤ë„ì˜ std::thread::spawnì´ ë£¨í”„ë¥¼ ëŠì–´ì£¼ê¸° ë•Œë¬¸ì— 
    // í˜„ìž¬ ìŠ¤ë ˆë“œì—ì„œ ì§ì ‘ í˜¸ì¶œí•´ë„ í…ŒìŠ¤íŠ¸ê°€ ë©ˆì¶”ì§€ ì•Šê³  ì¢…ë£Œë©ë‹ˆë‹¤.
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    let result = pool.execute_isolated(tenant_id, |runtime| {
        let _ = runtime.execute_script(
            "infinite", 
            "let i = 0; while(true){ i++; }".to_string()
        ).map_err(|e| anyhow::anyhow!(e))?;
        
        Ok(())
    }).await;

    // 3. ê²°ê³¼ ê²€ì¦
    match result {
        Err(TenantError::ExecutionTimeout { limit_ms, .. }) => {
            println!("âœ… Watchdog (Physical Thread) successfully terminated infinite loop");
            // Tier ê¸°ë³¸ê°’(ì˜ˆ: Free 1000ms)ê³¼ ì¼ì¹˜í•˜ëŠ”ì§€ í™•ì¸
            assert!(limit_ms > 0);
        }
        _ => panic!("Expected ExecutionTimeout, got {:?}", result),
    }

    Ok(())
}

#[test]
fn test_ffi_response_envelope_success() {
    use krepis_kernel::proto::{FfiResponse, ffi_response};
    
    let payload = vec![1, 2, 3];
    let req_id = "test-req".to_string();
    
    // Success Case
    let envelope = FfiResponse {
        result: Some(ffi_response::Result::SuccessPayload(payload.clone())),
        request_id: req_id.clone(),
        ..Default::default()
    };
    
    let encoded = envelope.encode_to_vec();
    let decoded = FfiResponse::decode(&encoded[..]).unwrap();
    
    if let Some(ffi_response::Result::SuccessPayload(data)) = decoded.result {
        assert_eq!(data, payload);
    } else {
        panic!("Should be SuccessPayload");
    }
}